# shgit

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  shgit.py
