[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shgit"
authors = [
    {name = "David Souther", email = "davidsouther+github@gmail.com"},
]
description = "Fluent Shell & Git python library"
version = "2024.40.0"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
